webpack watches changes in html now

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack": "^4.23.1"
   },
   "devDependencies": {
+    "raw-loader": "^0.5.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   }
