--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --watch --inline",
+    "dev": "webpack-dev-server --watch --inline",
     "postinstall": "typings install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
