--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "rxjs": "^6.3.3",
     "ts-loader": "^5.2.2",
     "typescript": "^3.1.4",
